syntax = "proto3";

package org.e2eelab.lib.protobuf;

message message_key {
    uint32 index = 1;
    bytes derived_key = 2;
}